test/cases/compile_errors/issue_2032_compile_diagnostic_string_for_top_level_decl_type.zig
export fn entry() void {
    const foo: u32 = @This(){};
    _ = foo;
}

// error
// backend=stage2
// target=native
//
// :2:29: error: expected type 'u32', found 'tmp'
// :1:1: note: struct declared here
